# reddit_by_anas

./: Cargo.toml  README.md
migrations/: 20230724122355_init.up.sql
src/: main.rs
src/api/: basic_auth.rs  comment.rs  mod.rs  post_images.rs  post_info.rs  users.rs
src/authentication/: validator.rs
src/connections/: create_connections.rs  mod.rs
src/model/: comment.rs  mod.rs  post_info.rs  users.rs
src/multimedia_api/: mod.rs  post_image.rs
src/my_activity/: comments_by_me.rs  configure_activity.rs  mod.rs  my_posts.rs
src/web_socket_connections/: lobby.rs  messages.rs  start_connection.rs  ws.rs
