[package]
name = "reddit_by_anas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"


sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "postgres", "uuid", "migrate", "macros"] }
serde = { version = "^1", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde","v4"] }
#uuid = { version = "0.8", features = ["v4", "serde"] }
log = "0.4.19"
serde_json = "1.0.103"
actix-web-httpauth = "0.8.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.7"
chrono = "0.4.26"
argonautica = "0.2.0"
actix = "0.13.0"
actix-web-actors = "4.2.0"
actix-multipart = "0.6.0"
#actix-multipart = "0.2"
mime = "0.3.17"
image = "0.24.7"
tokio-stream = "0.1.14"
tokio = "1.29.1"
futures-util = "0.3.28"
